--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,13 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="darkPrimaryColor">#FFA000</color>
+    <color name="lightPrimaryColor">#FFECB3</color>
+    <color name="primaryColor">#FFC107</color>
+    <color name="textIconsColor">#212121</color>
+    <color name="accentColor">#536DFE</color>
+    <color name="secondaryTextColor">#757575</color>
+    <color name="dividerColor">#BDBDBD</color>
+    <color name="white">#000000</color>
+
 </resources>
