--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,77 +1,193 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:fillViewport="true"
+    android:orientation="vertical"
+    android:padding="10dp"
+    android:scrollbarStyle="outsideOverlay"
+    >
 
-    <!-- Creation of Card View for UIs-->
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/my_toolbar"
+    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/darkPrimaryColor"
-        android:elevation="4dp"
-
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-
-        />
-
-    <android.support.v7.widget.CardView
-        android:layout_width="317dp"
         android:layout_height="wrap_content"
+        android:background="@color/white">
 
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="81dp"
-        android:elevation="12dp"
-        app:cardBackgroundColor="@color/darkPrimaryColor"
-        app:cardElevation="4dp">
+        <!-- Creation of Card View for UIs-->
 
-        <LinearLayout
-            android:layout_width="match_parent"
+
+        <android.support.v7.widget.CardView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:orientation="vertical">
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:elevation="12dp"
+            app:cardBackgroundColor="@color/darkPrimaryColor"
+            app:cardElevation="4dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="16dp">
 
-                <TextView
-                    android:layout_width="match_parent"
+
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="327dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:text="@string/welcome_text"
-                    android:textColor="#000"
-                    android:textSize="28sp" />
+                    android:orientation="vertical"
+                    android:padding="16dp">
 
-                <TextView
-                    android:layout_width="303dp"
-                    android:layout_height="58dp"
-                    android:text="@string/welcome_descriptor"
-                    android:textColor="@color/secondaryTextColor" />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:text="@string/welcome_text"
+                        android:textColor="#000"
+                        android:textSize="28sp" />
+
+                    <TextView
+                        android:layout_width="303dp"
+                        android:layout_height="58dp"
+                        android:text="@string/welcome_descriptor"
+                        android:textColor="@color/secondaryTextColor" />
+                </LinearLayout>
+                <!--
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0"
+                        android:text="@string/scan_button"
+                        android:textAlignment="center"
+                        android:textColor="@color/secondaryTextColor"
+                        android:theme="@style/PrimaryFlatButton" />
+                </LinearLayout>
+                -->
             </LinearLayout>
-            <!--
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="500dp"
+            android:layout_marginEnd="190dp"
+            android:elevation="12dp"
+            app:cardBackgroundColor="@color/darkPrimaryColor"
+            app:cardElevation="4dp">
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
 
-                <Button
-                    android:layout_width="wrap_content"
+
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0"
-                    android:text="@string/scan_button"
-                    android:textAlignment="center"
-                    android:textColor="@color/secondaryTextColor"
-                    android:theme="@style/PrimaryFlatButton" />
+                    android:orientation="vertical"
+                    android:padding="16dp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:text="@string/scan_button"
+                        android:textColor="@color/white"
+                        android:textSize="28sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="58dp"
+                        android:text="@string/scan_descriptor"
+                        android:textColor="@color/secondaryTextColor" />
+                </LinearLayout>
+                <!--
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0"
+                        android:text="@string/scan_button"
+                        android:textAlignment="center"
+                        android:textColor="@color/secondaryTextColor"
+                        android:theme="@style/PrimaryFlatButton" />
+                </LinearLayout>
+                -->
             </LinearLayout>
-            -->
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
-</RelativeLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="500dp"
+            android:layout_marginEnd="10dp"
+
+            android:elevation="12dp"
+            app:cardBackgroundColor="@color/darkPrimaryColor"
+            app:cardElevation="4dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+
+
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="16dp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:text="@string/welcome_text"
+                        android:textColor="#000"
+                        android:textSize="28sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="58dp"
+                        android:text="@string/welcome_descriptor"
+                        android:textColor="@color/secondaryTextColor" />
+                </LinearLayout>
+                <!--
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0"
+                        android:text="@string/scan_button"
+                        android:textAlignment="center"
+                        android:textColor="@color/secondaryTextColor"
+                        android:theme="@style/PrimaryFlatButton" />
+                </LinearLayout>
+                -->
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+    </RelativeLayout>
+</ScrollView>
