--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,6 @@
     <color name="accentColor">#536DFE</color>
     <color name="secondaryTextColor">#757575</color>
     <color name="dividerColor">#BDBDBD</color>
-    <color name="white">#000000</color>
+    <color name="white">#ffff</color>
 
 </resources>
