--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,35 +56,21 @@
                         android:text="@string/welcome_descriptor"
                         android:textColor="@color/secondaryTextColor" />
                 </LinearLayout>
-                <!--
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
 
-                    <Button
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0"
-                        android:text="@string/scan_button"
-                        android:textAlignment="center"
-                        android:textColor="@color/secondaryTextColor"
-                        android:theme="@style/PrimaryFlatButton" />
-                </LinearLayout>
-                -->
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
             android:layout_width="160dp"
             android:layout_height="wrap_content"
-
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="500dp"
             android:layout_marginEnd="190dp"
             android:elevation="12dp"
             app:cardBackgroundColor="@color/darkPrimaryColor"
-            app:cardElevation="4dp">
+            app:cardElevation="4dp"
+            android:clickable="true">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -142,7 +128,9 @@
 
             android:elevation="12dp"
             app:cardBackgroundColor="@color/darkPrimaryColor"
-            app:cardElevation="4dp">
+            app:cardElevation="4dp"
+            android:clickable="true"
+            android:onClick="onClickListener">
 
             <LinearLayout
                 android:layout_width="match_parent"
