--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,9 +46,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
-                        android:text="@string/welcome_text"
-                        android:textColor="#000"
-                        android:textSize="28sp" />
+                        android:text="@string/welcome_button"
+                        android:textColor="@color/white"
+                        android:textSize="34sp" />
 
                     <TextView
                         android:layout_width="303dp"
@@ -70,7 +70,8 @@
             android:elevation="12dp"
             app:cardBackgroundColor="@color/darkPrimaryColor"
             app:cardElevation="4dp"
-            android:clickable="true">
+            android:clickable="true"
+            android:onClick="onClickListenerScan">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -99,21 +100,7 @@
                         android:text="@string/scan_descriptor"
                         android:textColor="@color/secondaryTextColor" />
                 </LinearLayout>
-                <!--
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
 
-                    <Button
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0"
-                        android:text="@string/scan_button"
-                        android:textAlignment="center"
-                        android:textColor="@color/secondaryTextColor"
-                        android:theme="@style/PrimaryFlatButton" />
-                </LinearLayout>
-                -->
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
@@ -130,14 +117,11 @@
             app:cardBackgroundColor="@color/darkPrimaryColor"
             app:cardElevation="4dp"
             android:clickable="true"
-            android:onClick="onClickListener">
+            android:onClick="onClickListenerRecommendation">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
-
-
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -150,14 +134,14 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
-                        android:text="@string/welcome_text"
-                        android:textColor="#000"
-                        android:textSize="28sp" />
+                        android:text="@string/recommendation_button"
+                        android:textColor="@color/white"
+                        android:textSize="30sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="58dp"
-                        android:text="@string/welcome_descriptor"
+                        android:text="@string/recommendation_descriptor"
                         android:textColor="@color/secondaryTextColor" />
                 </LinearLayout>
                 <!--
