--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--   color for the app bar and other primary UI elements -->
     <color name="colorPrimary">#3F51B5</color>
+    <!--   a darker variant of the primary color, used for
+           the status bar (on Android 5.0+) and contextual app bars -->
     <color name="colorPrimaryDark">#303F9F</color>
+    <!--   a secondary color for controls like checkboxes and text fields -->
     <color name="colorAccent">#FF4081</color>
     <color name="darkPrimaryColor">#FFA000</color>
     <color name="lightPrimaryColor">#FFECB3</color>
@@ -11,5 +15,6 @@
     <color name="secondaryTextColor">#757575</color>
     <color name="dividerColor">#BDBDBD</color>
     <color name="white">#ffff</color>
+    <color name="black">#000000</color>
 
 </resources>
