toolbar addition to activities, layout fixes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,7 +62,7 @@
 
         <android.support.v7.widget.CardView
             android:layout_width="160dp"
-            android:layout_height="wrap_content"
+            android:layout_height="160dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="500dp"
@@ -106,7 +106,7 @@
 
         <android.support.v7.widget.CardView
             android:layout_width="160dp"
-            android:layout_height="wrap_content"
+            android:layout_height="160dp"
 
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
