--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,5 +5,6 @@
         android:id="@+id/action_back"
         android:icon="@drawable/ic_arrow_back_black_24dp"
         android:title="@string/action_back"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom"
+        />
 </menu>
