--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
 
         <!-- Creation of Card View for UIs-->
 
-
+        <!--Welcome Cardview -->
         <android.support.v7.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -60,6 +60,18 @@
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
+        <!--Static Charts for now as of 10/3/2018 -->
+        <com.jjoe64.graphview.GraphView
+            android:id="@+id/graph"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="211dp" />
+
+
+        <!--Scan Cardview -->
         <android.support.v7.widget.CardView
             android:layout_width="160dp"
             android:layout_height="160dp"
@@ -104,6 +116,7 @@
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
+        <!--Recommendations Cardview -->
         <android.support.v7.widget.CardView
             android:layout_width="160dp"
             android:layout_height="160dp"
@@ -161,5 +174,9 @@
                 -->
             </LinearLayout>
         </android.support.v7.widget.CardView>
+
+
+
+
     </RelativeLayout>
 </ScrollView>
