--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
                         android:textSize="34sp" />
 
                     <TextView
-                        android:layout_width="303dp"
+                        android:layout_width="294dp"
                         android:layout_height="58dp"
                         android:text="@string/welcome_descriptor"
                         android:textColor="@color/secondaryTextColor" />
@@ -68,7 +68,9 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="0dp"
-            android:layout_marginTop="211dp" />
+            android:layout_marginTop="184dp"
+            android:clickable="true"
+            android:onClick="onClickListenerGraph" />
 
 
         <!--Scan Cardview -->
@@ -77,7 +79,7 @@
             android:layout_height="160dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="500dp"
+            android:layout_marginTop="450dp"
             android:layout_marginEnd="190dp"
             android:elevation="12dp"
             app:cardBackgroundColor="@color/darkPrimaryColor"
@@ -123,7 +125,7 @@
 
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="500dp"
+            android:layout_marginTop="450dp"
             android:layout_marginEnd="10dp"
 
             android:elevation="12dp"
@@ -175,7 +177,50 @@
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
+        <!--Settings Cardview -->
+        <android.support.v7.widget.CardView
+            android:layout_width="160dp"
+            android:layout_height="160dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="625dp"
+            android:layout_marginEnd="190dp"
+            android:elevation="12dp"
+            app:cardBackgroundColor="@color/darkPrimaryColor"
+            app:cardElevation="4dp"
+            android:clickable="true"
+            android:onClick="onClickListenerSettings">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="16dp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:text="@string/settings_button"
+                        android:textColor="@color/white"
+                        android:textSize="28sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="58dp"
+                        android:text="@string/settings_descriptor"
+                        android:textColor="@color/secondaryTextColor" />
+                </LinearLayout>
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
 
 
     </RelativeLayout>
