- Updated to SDK v28 - Added Dependencies for Room Database to Build.Gradle - Resolved Version Conflicts (i.e. no more red lines)

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
     </style>
 
     <style name="PrimaryFlatButton" parent="Theme.AppCompat.Light">
-        <item name="android:buttonStyle">
+        <item name="buttonStyle">
             @style/Widget.AppCompat.Button.Borderless.Colored
         </item>
         <item name="colorAccent">#FFAB40</item>
