--- a/app/src/main/res/layout/recommendation_fragment.xml
+++ b/app/src/main/res/layout/recommendation_fragment.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.recommendation.RecommendationFragment">
 
     <TextView
-        android:id="@+id/message"
+        android:id="@+id/message_recommend"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="RecommendationFragment"
