--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -14,4 +14,8 @@
         android:title="@string/action_menu"
         app:showAsAction="ifRoom"
         />
+    <item
+        android:title="@string/scan_text"
+        android:id="@+id/menu_scan"
+        app:showAsAction="always|withText"/>
 </menu>
