--- a/app/src/main/res/layout/recommendation_activity.xml
+++ b/app/src/main/res/layout/recommendation_activity.xml
@@ -32,6 +32,24 @@
             android:layout_marginStart="63dp"
             android:layout_marginTop="131dp"
             tools:layout="@layout/recommendation_fragment" />
+
+        <TextView
+            android:id="@+id/batt_perc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="76dp"
+            android:layout_marginBottom="111dp" />
+
+        <TextView
+            android:id="@+id/time_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/batt_perc"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="88dp" />
+
     </RelativeLayout>
 </FrameLayout>
 
