--- a/app/src/main/res/layout/graph_activity.xml
+++ b/app/src/main/res/layout/graph_activity.xml
@@ -29,9 +29,18 @@
             android:layout_height="249dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="63dp"
-            android:layout_marginTop="131dp"
+            android:layout_marginStart="60dp"
+            android:layout_marginTop="68dp"
             tools:layout="@layout/graph_fragment" />
+
+        <com.jjoe64.graphview.GraphView
+            android:id="@+id/battery_graph"
+            android:layout_width="321dp"
+            android:layout_height="211dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="34dp"
+            android:layout_marginBottom="20dp" />
     </RelativeLayout>
 
 </FrameLayout>
