--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -221,6 +221,49 @@
 
             </LinearLayout>
         </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
+                android:layout_width="160dp"
+                android:layout_height="160dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="625dp"
+                android:layout_marginEnd="10dp"
+                android:elevation="12dp"
+                app:cardBackgroundColor="@color/darkPrimaryColor"
+                app:cardElevation="4dp"
+                android:clickable="true"
+                android:onClick="onClickListenerWifi">
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+
+                    android:orientation="vertical">
+
+                <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:padding="16dp">
+
+                    <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="8dp"
+                            android:text="@string/wifi_button"
+                            android:textColor="@color/white"
+                            android:textSize="28sp"/>
+
+                    <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="58dp"
+                            android:text="@string/wifi_descriptor"
+                            android:textColor="@color/secondaryTextColor"/>
+                </LinearLayout>
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
 
 
     </RelativeLayout>
