--- a/app/src/main/res/layout/activity_wifi.xml
+++ b/app/src/main/res/layout/activity_wifi.xml
@@ -15,9 +15,17 @@
                 android:text="TextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:id="@+id/speedWifi"/>
+        <TextView
+                android:text="TextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/speedDownload"/>
         <Button
-                android:text="Button"
+                android:text="Ping"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:id="@+id/buttonWifi"/>
+        <Button
+                android:text="Download"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/buttonDownload"/>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
