--- a/app/src/main/res/layout/graph_activity.xml
+++ b/app/src/main/res/layout/graph_activity.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Graph">
+    tools:context=".GraphActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/my_toolbar"
@@ -19,28 +19,48 @@
         />
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
         <fragment
-            android:id="@+id/recommendation"
-            android:name="edu.osu.table.ui.graph.GraphFragment"
-            android:layout_width="254dp"
-            android:layout_height="249dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="60dp"
-            android:layout_marginTop="68dp"
-            tools:layout="@layout/graph_fragment" />
+                android:id="@+id/recommendation"
+                android:name="edu.osu.table.ui.graph.GraphFragment"
+                android:layout_width="266dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="48dp"
+                android:layout_marginTop="68dp"
+                tools:layout="@layout/graph_fragment"/>
 
+        <com.github.mikephil.charting.charts.PieChart
+                android:id="@+id/battery_pie_chart_discharge"
+                android:layout_width="195dp"
+                android:layout_height="234dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="0dp"
+                android:layout_marginBottom="247dp"
+                android:contentDescription="@string/discharge_pie">
+
+        </com.github.mikephil.charting.charts.PieChart>
+        <com.github.mikephil.charting.charts.PieChart
+                android:layout_width="190dp"
+                android:layout_height="233dp"
+                android:id="@+id/battery_pie_chart_charge"
+                android:layout_marginStart="194dp" android:layout_alignStart="@+id/battery_pie_chart_discharge"
+                android:contentDescription="@string/charge_pie"
+                android:layout_alignParentBottom="true" android:layout_marginBottom="247dp">
+
+        </com.github.mikephil.charting.charts.PieChart>
         <com.jjoe64.graphview.GraphView
-            android:id="@+id/battery_graph"
-            android:layout_width="321dp"
-            android:layout_height="211dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="34dp"
-            android:layout_marginBottom="20dp" />
+                android:id="@+id/battery_graph"
+                android:layout_width="321dp"
+                android:layout_height="211dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="8dp"
+                android:layout_alignStart="@+id/recommendation"
+                android:layout_marginStart="-12dp"/>
     </RelativeLayout>
 
-</FrameLayout>
+</RelativeLayout>
