--- a/app/src/main/res/layout/recommendation_activity.xml
+++ b/app/src/main/res/layout/recommendation_activity.xml
@@ -8,48 +8,26 @@
     tools:context=".ui.RecommendationsActivity.RecommendationActivity">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/my_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/primaryColor"
-        android:elevation="2dp"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:title="TABLE"
-        />
+            android:id="@+id/my_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/primaryColor"
+            android:elevation="2dp"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="?attr/actionBarTheme"
+            app:title="TABLE"
+    />
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <fragment
-            android:id="@+id/recommendation"
-            android:name="edu.osu.table.ui.RecommendationsActivity.RecommendationFragment"
-            android:layout_width="254dp"
-            android:layout_height="249dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="63dp"
-            android:layout_marginTop="131dp"
-            tools:layout="@layout/recommendation_fragment" />
-
-        <TextView
-            android:id="@+id/batt_perc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="76dp"
-            android:layout_marginBottom="111dp" />
-
-        <TextView
-            android:id="@+id/time_id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/batt_perc"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="88dp" />
-
+        <android.support.v7.widget.RecyclerView
+                android:layout_width="wrap_content"
+                android:layout_height="441dp" android:layout_alignParentStart="true"
+                android:layout_marginStart="20dp" android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true" android:layout_marginEnd="20dp"
+                android:id="@+id/recycle_rec" android:layout_marginTop="62dp"/>
     </RelativeLayout>
 </FrameLayout>
 
