--- a/app/src/main/res/layout/recommendation_activity.xml
+++ b/app/src/main/res/layout/recommendation_activity.xml
@@ -25,9 +25,10 @@
         <android.support.v7.widget.RecyclerView
                 android:layout_width="wrap_content"
                 android:layout_height="441dp" android:layout_alignParentStart="true"
-                android:layout_marginStart="20dp" android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true" android:layout_marginEnd="20dp"
-                android:id="@+id/recycle_rec" android:layout_marginTop="62dp"/>
+                android:layout_marginStart="15dp" android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true" android:layout_marginEnd="15dp"
+                android:id="@+id/recycle_rec" android:layout_marginTop="62dp" android:layout_alignParentBottom="true"
+                android:layout_marginBottom="5dp"/>
     </RelativeLayout>
 </FrameLayout>
 
