--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,17 +61,17 @@
         </android.support.v7.widget.CardView>
 
         <!--Static Charts for now as of 10/3/2018 -->
-        <com.jjoe64.graphview.GraphView
-            android:id="@+id/graph"
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="184dp"
-            android:clickable="true"
-            android:onClick="onClickListenerGraph" />
-
+        <com.github.mikephil.charting.charts.LineChart
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:id="@+id/battery_main_graph"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="0dp"
+                android:layout_marginTop="184dp"
+                android:clickable="true"
+                android:onClick="onClickListenerGraph">
+        </com.github.mikephil.charting.charts.LineChart>
 
         <!--Scan Cardview -->
         <android.support.v7.widget.CardView
